# PegSolitaire

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  cmake.yml
Blueprints/: ENGLISH.b64  EUROPEAN.b64
SolitaireTest/: CMakeLists.txt  FieldTest.cpp  IGameTest.cpp  MultiplayerModeTest.cpp  PlayerTest.cpp  SingleModeTest.cpp  SolitaireTest.cpp
cmake/: copy_res.cmake  vcpkg.cmake
docs/: ActivityMenu.puml  ClassDiagramInterface.puml  _all.puml  logic.md
docs/Common/: Common.puml
docs/Field/: Field.puml
docs/Game/: IGame.puml  MultiplayerMode.puml  Player.puml  SingleMode.puml
log/: SolitaireGame.exe.DESKTOP-N0MBABS.User.log.ERROR.20210705-180314.8556  SolitaireGame.exe.DESKTOP-N0MBABS.User.log.ERROR.20210705-180402.1000  SolitaireGame.exe.DESKTOP-N0MBABS.User.log.INFO.20210705-180255.1908  SolitaireGame.exe.DESKTOP-N0MBABS.User.log.INFO.20210705-180314.8556  SolitaireGame.exe.DESKTOP-N0MBABS.User.log.INFO.20210705-180402.1000
src/: CMakeLists.txt  main.cpp
src/Common/: Common.h
src/CoreGame/: CoreGame.cpp  CoreGame.h
src/Engine/: Common.h  Field.cpp  Field.h  FieldGui.cpp  FieldGui.h  Grid.h  IGame.cpp  IGame.h  Math.cpp  Math.h  MultiplayerMode.cpp  Player.cpp  Player.h  SingleMode.cpp
src/Field/: Field.cpp  Field.h
src/Game/: CoreGame.cpp  CoreGame.h  IGame.cpp  IGame.h  MultiplayerMode.cpp  MultiplayerMode.h  Player.cpp  Player.h  SingleMode.cpp  SingleMode.h
src/Runner/: CMakeLists.txt  main.cpp  main_exp.cpp
src/UI/: Calculations.cpp  Calculations.h  Grid.cpp  Grid.h  Test.cpp  Test.h
src/UI/Scene/: BaseScene.cpp  BaseScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  StateScene.cpp  StateScene.h
src/Utils/: Singletone.h
